# claude-code-tg

./: .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  NEXT_SESSION.md  README.en.md  README.md  SECURITY.md  SUPPORT.md  marvis_research_report.md  marvis_research_report_honest.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  command-reference.md  compatibility.md  index.md  operator-guide.md  project-memory.md  quickstart.md  roadmap.md  security-model.md  troubleshooting.md  user-guide.md
docs/dev/: code-review-action-plan-phase4.md  code-review-action-plan.md  executor-refactoring-summary.md  fix-summary-group-auth.md  fix-summary-sanitizer.md  fix-summary-session-ownership.md  global-config-multiinstance-design.md  handoff-context-switch.md  phase1-completion-report.md  phase2-progress-report.md  phase3-continuation-prompt.md  phase3-kickoff.md  phase3-task3.1-completion-report.md  phase3-task3.2-completion-report.md  priority-matrix.md  progress-report.md  project-memory.md  quick-reference.md  session-summary-2026-06-08-phase3-final.md  session-summary-2026-06-08.md
docs/e2e/: telegram-e2e.md
scripts/: e2e_log_scan.py  e2e_macos_click.py  e2e_mini_app_api.py  e2e_preflight.py  e2e_prepare_assets.py  e2e_reset_telegram_menu.py  validate_local.py
src/claude_code_tg/: attachment_cleanup.py  (+35 more)
tests/: bot_helpers.py  test_attachment_cleanup.py  test_attachments.py  test_bot.py  test_bot_app.py  test_bot_attachments.py  test_bot_processing.py  test_claude_sessions.py  test_cli.py  test_cli_attachments.py  test_cli_bulk.py  test_cli_doctor.py  test_cli_init.py  test_cli_instances.py  test_cli_logs.py  test_cli_parser.py  test_cli_start.py  test_cli_status.py  test_cli_stop.py  test_command_menu.py  test_command_view.py  test_config.py  test_diagnostics.py  test_e2e_log_scan.py  test_e2e_macos_click.py  test_e2e_mini_app_api.py  test_e2e_preflight.py  test_e2e_prepare_assets.py  test_e2e_reset_telegram_menu.py  test_executor.py  test_file_security.py  test_group_authorization_fix.py  test_instance_store.py  test_main.py  test_message_input.py  test_message_output.py  test_process_control.py  test_repository_secrets.py  test_result_view.py  test_resume_view.py  (+9 more)
(+4 files in other folders)
