[project]
name = "claude-code-tg"
version = "0.8.0"
description = "Lightweight self-hosted Telegram manager for Claude Code CLI"
readme = "README.md"
license = "MIT"
authors = [{ name = "Raylee" }]
maintainers = [{ name = "Raylee" }]
requires-python = ">=3.11"
keywords = [
    "claude-code",
    "telegram-bot",
    "self-hosted",
    "developer-tools",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development",
    "Typing :: Typed",
]
dependencies = [
    "python-telegram-bot[job-queue]~=22.7",
    "python-dotenv~=1.0",
]

[project.optional-dependencies]
mini-app = [
    "starlette~=0.50.0",
    "uvicorn~=0.38.0",
]
dev = [
    "mypy~=2.1",
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=1,<2",
    "pytest-cov>=7.1.0",
    "ruff",
    "starlette~=0.50.0",
    "uvicorn~=0.38.0",
]

[project.scripts]
tgcc = "claude_code_tg.cli:cli"

[project.urls]
Homepage = "https://github.com/Ike-li/claude-code-tg"
Repository = "https://github.com/Ike-li/claude-code-tg"
Issues = "https://github.com/Ike-li/claude-code-tg/issues"
Documentation = "https://github.com/Ike-li/claude-code-tg#readme"
Changelog = "https://github.com/Ike-li/claude-code-tg/blob/main/CHANGELOG.md"
Security = "https://github.com/Ike-li/claude-code-tg/security/policy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_code_tg"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: tests that launch real subprocesses (e.g. claude integration)",
]

[tool.coverage.run]
branch = true
source = ["claude_code_tg"]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true

[tool.ruff.lint]
extend-select = ["B", "C4", "I", "PIE", "RET", "SIM", "UP"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
python_version = "3.11"
files = ["src/claude_code_tg"]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true
